--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,4 +1,5 @@
-<!-- <h1>Hello</h1> -->
-<h1><%= @message %></h1>
-<!--<p>I will start my first ruby on rails from </p>-->
-<p><%= @description %></p>
+<%= 5.times do |x| %>
+<h2>Title</h2>
+<p>We will add main contents to this area. We will add main contents to this area.We will add main contents to this area.
+<%= link_to "more detailed information" , "#" %> </p>
+<% end %>
